# agentkit

./: .gitignore  CLAUDE.md  pyproject.toml
agentkit/: __init__.py  base.py  coordinator.py  eval.py  exceptions.py  grounding.py  logger.py  mcp.py  messages.py  registry.py
demo/: config.py  main.py  mcp_server.py  start.sh  valuation.py
demo/agents/: coordinator.py  document.py  financial.py  market.py  neighborhood.py  property.py
demo/db/: client.py  schema.sql
demo/ingest/: attom.py  census.py  fred.py  rentcast.py  walkscore.py
demo/models/: schemas.py
demo/routers/: documents.py  properties.py  query.py  ui_api.py  valuation.py
demo/static/: index.html
examples/: quickstart.py
tests/: eval_suite.py  test_framework.py
