[project]
name = "agentkit"
version = "0.1.0"
description = "Reusable multi-agent framework for AI applications"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
agentkit-mcp = "agentkit.mcp:run_server"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
